feat: add chinese terms and privacy

--- a/src/app/i18n/locales/en/company.json
+++ b/src/app/i18n/locales/en/company.json
@@ -13,5 +13,9 @@
     "about-us.join-us.position": "Hiring Full-Stack Engineers",
     "about-us.join-us.description": "Join our innovative team at Muse and contribute to the cutting-edge digital asset management solutions. We're hiring Full-Stack Engineers with strong coding skills.",
     "about-us.join-us.apply": "Apply now by sending your resume to",
-    "about-us.join-us.apply-suffix": "for technical challenges."
+    "about-us.join-us.apply-suffix": "for technical challenges.",
+    "terms.title": "Service Agreement",
+    "terms.update-date": "Version Date: October 31, 2024",
+    "privacy.title": "Privacy Policy",
+    "privacy.update-date": "Version Date: October 31, 2024"
 }
