--- a/src/app/i18n/locales/en/landing-page.json
+++ b/src/app/i18n/locales/en/landing-page.json
@@ -6,5 +6,6 @@
   "hero.sub-banner.subtitle": "Dive into the future of asset management with MuseDAM&#39;s cutting-edge AI system. Experience intelligent search, insightful smart parsing, and a robust suite of creative tools, all enhanced by our interactive MuseCopilot for a seamless experience.",
   "subscribe.title": "Subscribe for exclusive updates and resources",
   "subscribe.button": "Subscribe",
-  "subscribe.free-trial": "Kickstart your journey with our free trial →"
+  "subscribe.join": "Kickstart your journey with our",
+  "subscribe.free-trial": "free trial"
 }
