feat: add zh json files

--- a/src/app/i18n/locales/en/precept.json
+++ b/src/app/i18n/locales/en/precept.json
@@ -1,4 +1,44 @@
 {
   "precept.title": "Trusted by the Best",
-  "precept.description": "Discover What Our Community Loves About Muse"
+  "precept.description": "Discover What Our Community Loves About Muse",
+  "precept.card0.name": "Isabella Gray",
+  "precept.card0.role": "Content Creator",
+  "precept.card0.description0": "The switch to Muse has been seamless, and it's now an integral part of our content creation process.",
+  "precept.card0.description1": "The ability to tag and categorize assets has saved us countless hours.",
+  "precept.card1.name": "Ava Martin",
+  "precept.card1.role": "Brand Manager",
+  "precept.card1.description0": "I can't recommend Muse highly enough.",
+  "precept.card1.description1": "It's made managing our digital assets a walk in the park, with features that are both innovative and practical.",
+  "precept.card2.name": "Mark Davis",
+  "precept.card2.role": "IT Specialist",
+  "precept.card2.description0": "I've sung the praises of Muse before, and it continues to redefine how we handle creative assets.",
+  "precept.card2.description1": "It's like upgrading from an outdated note-taking app to a powerful project management tool – a quantum leap forward.",
+  "precept.card3.name": "Oscar Dickieson",
+  "precept.card3.role": "Content Creator",
+  "precept.card3.description0": "Loving Muse! 💖 ",
+  "precept.card3.description1": "The ability to preview over 70 file formats in the browser is a lifesaver, and the real-time collaboration features are simply outstanding.",
+  "precept.card4.name": "Sophia Lee",
+  "precept.card4.role": "Creative Director",
+  "precept.card4.description0": "Muse has become our go-to for file storage, replacing Google Drive entirely.",
+  "precept.card4.description1": "It’s not just affordable; it’s a game-changer for organizing assets across teams. The search capabilities are unmatched.",
+  "precept.card5.name": "Lily Thompson",
+  "precept.card5.role": "Marketing Manager",
+  "precept.card5.description0": "Muse has been a revelation for our marketing team, making it effortless to share and manage our digital assets. ",
+  "precept.card5.description1": "It's a tool that's both intuitive and powerful.",
+  "precept.card6.name": "Lara Turner",
+  "precept.card6.role": "Digital Strategist",
+  "precept.card6.description0": "Muse is the Swiss Army knife of digital asset management. It's packed with features that make our work not only easier but also more enjoyable.",
+  "precept.card6.description1": "The team can't imagine going back to the old ways now.",
+  "precept.card7.name": "Jake Chandler",
+  "precept.card7.role": "Operations Manager",
+  "precept.card7.description0": "The efficiency Muse brings to our workflow is unmatched!",
+  "precept.card7.description1": "With its smart tagging and search, finding the right asset is now a breeze.",
+  "precept.card8.name": "Mia Tse",
+  "precept.card8.role": "Team Coordinator",
+  "precept.card8.description0": "Muse has completely transformed our team's approach to asset management.",
+  "precept.card8.description1": "It's intuitive, user-friendly, and has become the backbone of our creative process.",
+  "precept.card9.name": "Oliver Anderson",
+  "precept.card9.role": "Art Director",
+  "precept.card9.description0": "With Muse, we've found a digital asset manager that not only meets but exceeds our expectations.",
+  "precept.card9.description1": "The user interface is clean, and the functionality is robust—perfect for our creative workflow."
 }
