--- a/src/app/i18n/locales/en/dynamic-feedback.json
+++ b/src/app/i18n/locales/en/dynamic-feedback.json
@@ -1,33 +1,33 @@
 {
-  "hero.tag": "Permissions",
-  "hero.title": "Streamline Team Workflows with Precise Access Controls",
-  "hero.description": "Control your team's digital workflow by customizing access to both shared and private workspaces with MuseDAM's Permissions feature, designed to streamline collaboration and maintain focus.",
+  "hero.tag": "Dynamic Feedback",
+  "hero.title": "Interactive Annotations for Enhanced Team Engagement",
+  "hero.description": "Boost team interaction and project engagement with our interactive annotation tools, revolutionizing the way teams work with project materials.",
 
-  "showcase.title": "Drive Team Performance through MuseDAM's Permissions",
+  "showcase.title": "Transform Collaboration with MuseDAM's Dynamic Feedback",
 
-  "showcase.points.0.keyword": "Workspace Flexibility",
-  "showcase.points.0.description": "Divide your team's digital space into shared and private areas to accommodate both collaborative and individual work.",
+  "showcase.points.0.keyword": "Interactive Commenting",
+  "showcase.points.0.description": "Enable team members to leave comments or replies on assets, fostering a more dynamic dialogue around your projects.",
 
-  "showcase.points.1.keyword": "Private Space Management",
-  "showcase.points.1.description": "Private space administrators have the autonomy to activate or deactivate these areas, providing a secure environment for sensitive projects.",
+  "showcase.points.1.keyword": "Comment Management",
+  "showcase.points.1.description": "Comment owners have the power to edit, delete, or mark comments as complete, ensuring that the conversation remains organized and relevant.",
 
-  "showcase.points.2.keyword": "Customizable Shared Space Permissions",
-  "showcase.points.2.description": "Customize folder access in your team's shared space to meet the specific needs of members and departments with granular permissions: Edit, Upload, View, and Download.",
+  "showcase.points.2.keyword": "Visual Annotations",
+  "showcase.points.2.description": "Empower team members to add annotations by either dragging the mouse to circle areas of interest or using a digital pen to highlight sections of images directly.",
 
-  "text-display.title": "MuseDAM Permissions: The Foundation of Team Efficiency and Security",
+  "text-display.title": "MuseDAM Dynamic Feedback: Elevate Team Communication and Efficiency",
 
-  "text-display.points.0.keyword": "Data Integrity and Access Control",
-  "text-display.points.0.description": "Ensure data integrity and team access with precise permission settings.",
+  "text-display.points.0.keyword": "Advanced Commenting for Projects",
+  "text-display.points.0.description": "Streamline communication with advanced commenting features for dynamic project discussions.",
 
-  "text-display.points.1.keyword": "Private Space Security",
+  "text-display.points.1.keyword": "Comment Management Tools",
   "text-display.points.1.description": "Safeguard sensitive data with flexible private space management.",
 
   "text-display.points.2.keyword": "Collaboration through Permissions",
-  "text-display.points.2.description": "Nurture collaboration through controlled permissions that drive teamwork.",
+  "text-display.points.2.description": "Empower comment owners with management tools for organized and relevant conversations.",
 
-  "text-display.points.3.keyword": "Productivity through Streamlined Access",
-  "text-display.points.3.description": "Boost productivity by streamlining resource access for team members.",
+  "text-display.points.3.keyword": "Visual Annotations for Collaboration",
+  "text-display.points.3.description": "Enhance collaboration with precise visual annotations for detailed asset analysis.",
 
-  "text-display.points.4.keyword": "Unlock Team Potential",
-  "text-display.points.4.description": "Don't let inflexible permissions hinder your team's potential. With MuseDAM Permissions, create a tailored access control system that boosts efficiency and security."
+  "text-display.points.4.keyword": "Dynamic Feedback Process",
+  "text-display.points.4.description": "Upgrade to a dynamic feedback process that boosts team engagement and efficiency."
 }
