--- a/src/app/i18n/locales/en/header.json
+++ b/src/app/i18n/locales/en/header.json
@@ -9,7 +9,6 @@
   "ai-powered.auto-tags.description": "Auto-Tag for Search & Clustering",
   "ai-powered.muse-copilot.title": "MuseCopilot",
   "ai-powered.muse-copilot.description": "Chat with Copilot on your Content",
-
   "visual-workspace.inspiration-collection.title": "Inspiration Collection",
   "visual-workspace.inspiration-collection.description": "Browser Plugin for Websites",
   "visual-workspace.smart-folders.title": "Smart Folders",
@@ -20,7 +19,6 @@
   "visual-workspace.multiple-viewing.description": "List, Board, Waterfall and Adaptive",
   "visual-workspace.encrypted-sharing.title": "Encrypted Sharing",
   "visual-workspace.encrypted-sharing.description": "Set Expiry and Password for Sharing",
-
   "team-collaboration.team-management.title": "Team Management",
   "team-collaboration.team-management.description": "Member and Department Management",
   "team-collaboration.permissions.title": "Permissions",
@@ -31,8 +29,13 @@
   "team-collaboration.versions.description": "Version Control and History Access",
   "team-collaboration.data-statistics.title": "Data Statistics",
   "team-collaboration.data-statistics.description": "Activity Statistics and Leaderboards",
-
   "category.ai-powered": "AI-Powered",
   "category.visual-workspace": "Visual Workspace",
-  "category.team-collaboration": "Team Collaboration"
+  "category.team-collaboration": "Team Collaboration",
+  "nav-bar.features": "Features",
+  "nav-bar.customers": "Customers",
+  "nav-bar.why-muse": "Why Muse?",
+  "nav-bar.pricing": "Pricing",
+  "nav-bar.resources": "Resources",
+  "button.login": "Login"
 }
