feat: update i18n and investorsCards

--- a/src/app/i18n/locales/en/company.json
+++ b/src/app/i18n/locales/en/company.json
@@ -17,5 +17,8 @@
     "terms.title": "Service Agreement",
     "terms.update-date": "Version Date: October 31, 2024",
     "privacy.title": "Privacy Policy",
-    "privacy.update-date": "Version Date: October 31, 2024"
+    "privacy.update-date": "Version Date: October 31, 2024",
+    "investors.temasek": "TEMASEK",
+    "investors.sequoia": "SEQUOIA",
+    "investors.hearst": "HEARST"
 }
