--- a/src/app/i18n/locales/en/features.json
+++ b/src/app/i18n/locales/en/features.json
@@ -1,3 +1,5 @@
 {
-    "button.start": "Start for free"
+    "button.start": "Start for free",
+    "more-features.title": "More in AI-Powered",
+    "more-features.view-all": "View all features"
 }
