--- a/src/app/i18n/locales/en/footer.json
+++ b/src/app/i18n/locales/en/footer.json
@@ -22,13 +22,14 @@
   "customers.game": "Game",
   "customers.publisher": "Publisher",
   "customers.education": "Education",
-  "customers.non-profits": "Non-profits",
+  "customers.non-profit": "Non-profits",
   "resources.help-center": "Help Center",
   "resources.blog": "Blog",
   "resources.tutorials": "Tutorials",
   "resources.status-page": "Status Page",
   "resources.security": "Security",
   "resources.release-notes": "Release notes",
+  "resources.sitemap": "Sitemap",
   "company.about-us": "About Us",
   "company.investors": "Investors",
   "company.culture": "Culture",
