--- a/src/app/i18n/locales/en/landing-page.json
+++ b/src/app/i18n/locales/en/landing-page.json
@@ -7,5 +7,6 @@
   "subscribe.title": "Subscribe for exclusive updates and resources",
   "subscribe.button": "Subscribe",
   "subscribe.join": "Kickstart your journey with our",
+  "subscribe.email.placeholder": "Your work email",
   "subscribe.free-trial": "free trial"
 }
