--- a/src/app/i18n/locales/zh/company.json
+++ b/src/app/i18n/locales/zh/company.json
@@ -17,5 +17,8 @@
     "terms.title": "服务协议",
     "terms.update-date": "版本日期：2024年10月31日",
     "privacy.title": "隐私政策",
-    "privacy.update-date": "版本日期：2024年10月31日"
+    "privacy.update-date": "版本日期：2024年10月31日",
+    "investors.temasek": "淡马锡",
+    "investors.sequoia": "红杉资本",
+    "investors.hearst": "赫斯特资本"
 }
