--- a/src/app/i18n/locales/zh/footer.json
+++ b/src/app/i18n/locales/zh/footer.json
@@ -1,43 +1,44 @@
 {
-  "features.ai-search": "AI Search",
-  "features.ai-parsing": "AI Parsing",
-  "features.ai-content-creation": "AI Content Creation",
-  "features.auto-tags": "Auto Tags",
+  "features.ai-search": "智能搜索",
+  "features.ai-parsing": "智能解析",
+  "features.ai-content-creation": "智能创作",
+  "features.auto-tags": "自动打标",
   "features.muse-copilot": "MuseCopilot",
-  "features.inspiration-collection": "Inspiration Collection",
-  "features.smart-folders": "Smart Folders",
-  "features.file-formats": "70+ File Formats",
-  "features.multiple-viewing": "Multiple Viewing",
-  "features.encrypted-sharing": "Encrypted Sharing",
-  "features.team-management": "Team Management",
-  "features.permissions": "Permissions",
-  "features.dynamic-feedback": "Dynamic Feedback",
-  "features.versions": "Versions",
-  "features.data-statistics": "Data Statistics",
-  "customers.creative-production": "Creative Production",
-  "customers.e-commerce": "E-commerce",
-  "customers.marketing": "Marketing",
-  "customers.media-entertainment": "Media & Entertainment",
-  "customers.events": "Events",
-  "customers.game": "Game",
-  "customers.publisher": "Publisher",
-  "customers.education": "Education",
-  "customers.non-profits": "Non-profits",
-  "resources.help-center": "Help Center",
-  "resources.blog": "Blog",
+  "features.inspiration-collection": "灵感采集",
+  "features.smart-folders": "智能文件夹",
+  "features.file-formats": "70+文件格式",
+  "features.multiple-viewing": "多维视图",
+  "features.encrypted-sharing": "加密分享",
+  "features.team-management": "团队管理",
+  "features.permissions": "权限管理",
+  "features.dynamic-feedback": "评论与标注",
+  "features.versions": "版本管理",
+  "features.data-statistics": "数据分析",
+  "customers.creative-production": "创意制作",
+  "customers.e-commerce": "电商",
+  "customers.marketing": "市场与营销",
+  "customers.media-entertainment": "媒体与娱乐",
+  "customers.events": "活动",
+  "customers.game": "游戏",
+  "customers.publisher": "出版商",
+  "customers.education": "教育",
+  "customers.non-profit": "非营利组织",
+  "resources.help-center": "帮助中心",
+  "resources.blog": "博客",
   "resources.tutorials": "Tutorials",
-  "resources.status-page": "Status Page",
-  "resources.security": "Security",
-  "resources.release-notes": "Release notes",
-  "company.about-us": "About Us",
+  "resources.status-page": "系统状态",
+  "resources.security": "数据安全",
+  "resources.release-notes": "更新日志",
+  "resources.sitemap": "网站地图",
+  "company.about-us": "关于我们",
   "company.investors": "Investors",
   "company.culture": "Culture",
   "company.diversity": "Diversity",
   "company.inclusion": "Inclusion",
   "company.policies": "Policies",
-  "company.terms": "Terms",
-  "company.privacy": "Privacy",
-  "company.careers": "Careers",
+  "company.terms": "服务条款",
+  "company.privacy": "隐私政策",
+  "company.careers": "工作机会",
   "group.features": "Features",
   "group.customers": "Customers",
   "group.resources": "Resources",
