--- a/src/app/i18n/locales/zh/features.json
+++ b/src/app/i18n/locales/zh/features.json
@@ -1,3 +1,5 @@
 {
-    "button.start": "立即开始使用"
+    "button.start": "立即开始使用",
+    "more-features.title": "探索更多AI能力",
+    "more-features.view-all": "查看全部功能"
 }
