feat: add zh images

--- a/src/app/i18n/locales/zh/footer.json
+++ b/src/app/i18n/locales/zh/footer.json
@@ -39,8 +39,8 @@
   "company.terms": "服务条款",
   "company.privacy": "隐私政策",
   "company.careers": "工作机会",
-  "group.features": "Features",
-  "group.customers": "Customers",
-  "group.resources": "Resources",
-  "group.company": "Company"
+  "group.features": "功能",
+  "group.customers": "客户",
+  "group.resources": "资源",
+  "group.company": "公司"
 }
