--- a/src/app/i18n/locales/en/header.json
+++ b/src/app/i18n/locales/en/header.json
@@ -37,5 +37,7 @@
   "nav-bar.why-muse": "Why Muse?",
   "nav-bar.pricing": "Pricing",
   "nav-bar.resources": "Resources",
+  "nav-bar.about-us": "About Us",
+  "nav-bar.careers": "Careers",
   "button.login": "Login"
 }
