--- a/src/app/i18n/locales/zh/header.json
+++ b/src/app/i18n/locales/zh/header.json
@@ -37,5 +37,7 @@
   "nav-bar.why-muse": "为什么 Muse?",
   "nav-bar.pricing": "价格",
   "nav-bar.resources": "资源",
+  "nav-bar.about-us": "关于我们",
+  "nav-bar.careers": "工作机会",
   "button.login": "登录"
 }
