inspiration collection btn

--- a/src/app/i18n/locales/zh/inspiration-collection.json
+++ b/src/app/i18n/locales/zh/inspiration-collection.json
@@ -1,4 +1,5 @@
 {
+  "button.start": "立即安装插件",
   "hero.tag": "灵感采集",
   "hero.title": "开启AI时代的网页灵感采集神器",
   "hero.description": "MuseDAM 作为 Chrome、Edge 和 360浏览器的实用扩展工具，致力于提升您的数字资产管理能力。利用直观的拖拽采集、以及整网页批量采集功能，无缝对接您的创意工作流程，轻松搜集图片、视频和网页内容。使用 MuseDAM 对 AI 艺术作品进行更高效的管理。",
