--- a/src/app/i18n/locales/en/inspiration-collection.json
+++ b/src/app/i18n/locales/en/inspiration-collection.json
@@ -1,4 +1,6 @@
 {
+  "button.start": "Install now",
+
   "hero.tag": "Inspiration Collection",
   "hero.title": "AI-Powered Web Inspiration Collector",
   "hero.description": "MuseDAM is the ultimate web browser extension for Chrome, Edge, and 360 browsers, designed to supercharge your digital asset management. Experience seamless creativity with our intuitive drag-and-drop feature, and effortlessly collect images, videos, and web pages. Join the AI era with MuseDAM, your go-to AI artwork asset library, ensuring efficient preservation of your digital inspirations.",
