--- a/src/app/i18n/locales/zh/header.json
+++ b/src/app/i18n/locales/zh/header.json
@@ -39,5 +39,12 @@
   "nav-bar.resources": "资源",
   "nav-bar.about-us": "关于我们",
   "nav-bar.careers": "工作机会",
-  "button.login": "登录"
+  "button.login": "登录",
+  "more-features.ai-content-creation.title": "内容创作",
+  "more-features.inspiration-collection.title": "灵感采集",
+  "more-features.inspiration-collection.description": "网页浏览器插件",
+  "more-features.file-formats.title": "70+ 文件格式",
+  "more-features.encrypted-sharing.title": "加密分享",
+  "more-features.team-management.title": "团队管理",
+  "more-features.dynamic-feedback.title": "动态反馈"
 }
