--- a/src/app/i18n/locales/en/landing-page.json
+++ b/src/app/i18n/locales/en/landing-page.json
@@ -3,7 +3,7 @@
   "hero.subtitle": "for the AI Content Era",
   "hero.button.start": "Start for free",
   "hero.sub-banner.title": "AI-Powered Asset Management",
-  "hero.sub-banner.subtitle": "Dive into the future of asset management with MuseDAM&#39;s cutting-edge AI system. Experience intelligent search, insightful smart parsing, and a robust suite of creative tools, all enhanced by our interactive MuseCopilot for a seamless experience.",
+  "hero.sub-banner.subtitle": "Dive into the future of asset management with MuseDAM's cutting-edge AI system. Experience intelligent search, insightful smart parsing, and a robust suite of creative tools, all enhanced by our interactive MuseCopilot for a seamless experience.",
   "subscribe.title": "Subscribe for exclusive updates and resources",
   "subscribe.button": "Subscribe",
   "subscribe.join": "Kickstart your journey with our",
