fix: some ui bug

--- a/src/app/i18n/locales/en/company.json
+++ b/src/app/i18n/locales/en/company.json
@@ -1,6 +1,6 @@
 {
     "about-us.hero.head": "Machine Creativity Empowering Humanity",
-    "about-us.hero.join.btn": "JOIN US",
+    "about-us.hero.join.btn": "Join Us",
     "about-us.investors.title": "Investors",
     "about-us.investors.subtitle": "MuseDAM - Driving Innovation in Digital Asset Management",
     "about-us.our-story.title": "Our Story",
