--- a/src/app/i18n/locales/zh/footer.json
+++ b/src/app/i18n/locales/zh/footer.json
@@ -42,5 +42,10 @@
   "group.features": "功能",
   "group.customers": "客户",
   "group.resources": "资源",
-  "group.company": "公司"
+  "group.company": "公司",
+  "tezignShanghaiInfo": "© 特赞（上海）信息科技有限公司",
+  "shanghaiIcpNo1502142": "沪ICP备15021426号-22",
+  "shanghaiPublicNetwork": "沪公网安备 31010402010164 号",
+  "networkInformationAc": "网信算备 310115402810501240017 号",
+  "networkInformationAc2": "网信算备 310115402810501240033 号"
 }
