fix: home page seo

--- a/src/app/i18n/locales/en/seo.json
+++ b/src/app/i18n/locales/en/seo.json
@@ -1,4 +1,8 @@
 {
+    "home": {
+        "title": "MuseDAM | AI-Powered Digital Asset Management - Collect, Organize, Collaborate",
+        "description": "Discover MuseDAM, the smart digital asset management software that simplifies collection, organization, and team collaboration with AI-powered features."
+    },
     "about-us": {
         "title": "MuseDAM | Our Story: Empowering Digital Asset Management",
         "description": "Discover the MuseDAM journey and meet our investors. We're revolutionizing digital asset management with intuitive tools and a global vision, connecting creators and businesses worldwide."
