--- a/src/app/i18n/locales/zh/seo.json
+++ b/src/app/i18n/locales/zh/seo.json
@@ -1,4 +1,8 @@
 {
+    "home": {
+        "title": "MuseDAM - 智能数字资产管理平台 | 采集、整理、协作、AI生成",
+        "description": "MuseDAM 是一款智能数字资产管理软件,提供资源采集、文件整理、团队协作和 AI 生成等功能,助力企业高效管理数字资产。"
+    },
     "about-us": {
         "title": "MuseDAM | 我们的故事：赋能数字资产管理",
         "description": "了解MuseDAM的发展历程和我们的投资者。我们正在通过直观的工具和全球视野革新数字资产管理，连接全球创作者和企业。"
