feat: nav-bar add extension

--- a/src/app/i18n/locales/en/header.json
+++ b/src/app/i18n/locales/en/header.json
@@ -10,7 +10,7 @@
   "ai-powered.muse-copilot.title": "MuseCopilot",
   "ai-powered.muse-copilot.description": "Chat with Copilot on your Content",
   "visual-workspace.inspiration-collection.title": "Inspiration Collection",
-  "visual-workspace.inspiration-collection.description": "Browser Plugin for Websites",
+  "visual-workspace.inspiration-collection.description": "Web Browser Extension",
   "visual-workspace.smart-folders.title": "Smart Folders",
   "visual-workspace.smart-folders.description": "Automatic Categorization",
   "visual-workspace.file-formats.title": "70+ File Formats",
@@ -38,6 +38,7 @@
   "nav-bar.pricing": "Pricing",
   "nav-bar.resources": "Resources",
   "nav-bar.about-us": "About Us",
+  "nav-bar.extension": "Extension",
   "nav-bar.careers": "Careers",
   "button.login": "Login",
   "more-features.ai-content-creation.title": "Content Creation",
