--- a/src/app/i18n/locales/zh/header.json
+++ b/src/app/i18n/locales/zh/header.json
@@ -38,6 +38,7 @@
   "nav-bar.pricing": "价格",
   "nav-bar.resources": "资源",
   "nav-bar.about-us": "关于我们",
+  "nav-bar.extension": "采集插件",
   "nav-bar.careers": "工作机会",
   "button.login": "登录",
   "more-features.ai-content-creation.title": "内容创作",
