--- a/src/app/i18n/locales/zh/features.json
+++ b/src/app/i18n/locales/zh/features.json
@@ -3,5 +3,9 @@
   "more-features.view-all": "查看全部功能",
   "more-features.ai-powered.title": "探索更多AI能力",
   "more-features.visual-workspace.title": "探索更多工作空间",
-  "more-features.team-collaboration.title": "探索更多团队协作"
+  "more-features.team-collaboration.title": "探索更多团队协作",
+  "features.title": "什么是 MuseDAM？",
+  "features.ai-powered.title": "AI 能力",
+  "features.visual-workspace.title": "工作空间",
+  "features.team-collaboration.title": "团队协作"
 }
